2004-10-26 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* System.Design.dll.sources: added PanelDesigner.cs.

2004-06-11  Gert Driesen <drieseng@users.sourceforge.net>

	* System.Design.dll.sources: added more stub for classes
	in System.Windows.Forms.Design

2004-06-11  Gert Driesen <drieseng@users.sourceforge.net>

	* System.Design.dll.sources: added more stubs for classes
	in System.Diagnostics.Design, System.Messaging.Design and
	System.ServiceProcess.Design

2004-06-11  Gert Driesen <drieseng@users.sourceforge.net>

	* Makefile: added reference to System.Data assembly
	* System.Design.dll.sources: added new stubbed classes

2004-05-16  Gert Driesen (drieseng@users.sourceforge.net)

	* System.Windows.Forms.Design/IMenuEditorService.cs:
	fixed signature

2004-05-16  Gert Driesen (drieseng@users.sourceforge.net)

	* System.Windows.Forms.Design/DocumentDesigner.cs:
	stubbed
	* System.Windows.Forms.Design/ParentControlDesigner.cs:
	stubbed
	* System.Windows.Forms.Design/ScrollableControlDesigner.cs:
	stubbed

2004-05-16  Gert Driesen (drieseng@users.sourceforge.net)
	
	* System.Windows.Forms.Design/ControlDesigner.cs:
	stubbed

2004-05-16  Gert Driesen (drieseng@users.sourceforge.net)

	* System.Windows.Forms.Design/ISelectionUIHandler.cs:
	converted linefeeds to unix

2004-05-16  Gert Driesen (drieseng@users.sourceforge.net)

	* System.Design.dll.sources: added ISelectionUIHandler
	* System.Windows.Forms.Design/ISelectionUIHandler.cs: 
	added
	* System.Windows.Forms.Design/ComponentTray.cs: stubbed

2004-05-15  Gert Driesen (drieseng@users.sourceforge.net)

	* Makefile: add reference to Accessibility assembly, needed
	to check CLS compliance
	* Assembly/AssemblyInfo.cs: System.Design is CLS Compliant

2004-05-15  Gert Driesen (drieseng@users.sourceforge.net)

	* System.Design.dll.sources: remove DataBindingCollection
	* System.Web.UI.Design/DataBindingCollection.cs: removed
	* System.Web.UI.Design/WebControlToolboxItem.cs: fixed
	public API