@@ -45,7 +45,6 @@ System.Web.UI.Design/ITemplateEditingService.cs
 System.Web.UI.Design/IWebFormReferenceManager.cs
 System.Web.UI.Design/IWebFormsBuilderUIService.cs
 System.Web.UI.Design/IWebFormsDocumentService.cs
-System.Web.UI.Design/PanelDesigner.cs
 System.Web.UI.Design/ReadWriteControlDesigner.cs
 System.Web.UI.Design/TemplatedControlDesigner.cs
 System.Web.UI.Design/TemplateEditingService.cs
@@ -60,6 +59,32 @@ System.Web.UI.Design/WebControlToolboxItem.cs
 System.Web.UI.Design/XmlFileEditor.cs
 System.Web.UI.Design/XmlUrlEditor.cs
 System.Web.UI.Design/XslUrlEditor.cs
+System.Web.UI.Design.WebControls/FormatPageInternal.cs
+System.Web.UI.Design.WebControls/GeneralPageDataListInternal.cs
+System.Web.UI.Design.WebControls/PanelDesigner.cs
+System.Web.UI.Design.WebControls/TableDesigner.cs
+System.Web.UI.Design.WebControls/HyperLinkDesigner.cs
+System.Web.UI.Design.WebControls/BordersPageInternal.cs
+System.Web.UI.Design.WebControls/CalendarDesigner.cs
+System.Web.UI.Design.WebControls/CheckBoxDesigner.cs
+System.Web.UI.Design.WebControls/LinkButtonDesigner.cs
+System.Web.UI.Design.WebControls/AdRotatorDesigner.cs
+System.Web.UI.Design.WebControls/TableRowsCollectionEditor.cs
+System.Web.UI.Design.WebControls/RepeaterDesigner.cs
+System.Web.UI.Design.WebControls/RegexTypeEditor.cs
+System.Web.UI.Design.WebControls/BaseValidatorDesigner.cs
+System.Web.UI.Design.WebControls/BaseDataListPageInternal.cs
+System.Web.UI.Design.WebControls/BaseDataListDesigner.cs
+System.Web.UI.Design.WebControls/CalendarAutoFormatDialog.cs
+System.Web.UI.Design.WebControls/TODOAttribute.cs
+System.Web.UI.Design.WebControls/RegexEditorDialog.cs
+System.Web.UI.Design.WebControls/XmlDesigner.cs
+System.Web.UI.Design.WebControls/TableCellsCollectionEditor.cs
+System.Web.UI.Design.WebControls/ButtonDesigner.cs
+System.Web.UI.Design.WebControls/BaseDataListComponentEditor.cs
+System.Web.UI.Design.WebControls/ListControlDataBindingHandler.cs
+System.Web.UI.Design.WebControls/LabelDesigner.cs
+System.Web.UI.Design.WebControls/DataListComponentEditor.cs
 System.Windows.Forms.Design/AnchorEditor.cs
 System.Windows.Forms.Design/AxImporter.cs
 System.Windows.Forms.Design/AxParameterData.cs
