@@ -1,7 +1,3 @@
-2004-10-26 Gonzalo Paniagua Javier <gonzalo@ximian.com>
-
-	* PanelDesigner.cs: New file.
-
 2004-06-11  Gert Driesen <drieseng@users.sourceforge.net>
 
 	* CalendarDataBindingHandler.cs: stubbed
