@@ -1,6 +1,7 @@
 2004-10-26 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
-	* System.Design.dll.sources: added PanelDesigner.cs.
+	* System.Design.dll.sources: added files in
+	System.Web.UI.Design.WebControls.
 
 2004-06-11  Gert Driesen <drieseng@users.sourceforge.net>
 
